--- a/package-name/pyproject.toml
+++ b/package-name/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "oop"
+name = "package-name"
 version = "0.1.0"
 description = ""
 authors = ["Andrey Sarason <sarason@rambler.ru>"]
@@ -7,11 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-pytest = "^8.3.4"
 
-
-[tool.poetry.group.dev.dependencies]
-pytest = "^8.3.3"
 
 [build-system]
 requires = ["poetry-core"]
